5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1728_2499.log
== TEST (2019-05-15 14:47:23) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero:"))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:27) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero:"))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:30) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero:"))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:34) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero:"))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:47:46) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:01) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:05) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:15) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
print(factorial(a))

-- OUTPUT:
5040
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:48:22) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
print(1/factorial(a))

-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:54:57) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
print(round(1/factorial(a), 2))


-- OUTPUT:
0.0001984126984126984
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:10) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
   print(round(1/factorial(a), 2))


-- ERROR:
File "XXXX", line 8
    print(round(1/factorial(a), 2))
                                  ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:55:18) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 2))


-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:59:32) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 2))


-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:00:02) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 2))


-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:00) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
print(round(1/factorial(a), 2))


-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:09) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
print(round(1/factorial(a), 8))


-- OUTPUT:
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:43) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 8))
if("Fim")


-- ERROR:
File "XXXX", line 9
    if("Fim")
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:49) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 8))
if("Fim"):


-- ERROR:
File "XXXX", line 11
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:01:58) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 8))
if("Fim"):
-- ERROR:
File "XXXX", line 10
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:02:21) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+1
	print(round(1/factorial(a), 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:03:18) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(1/factorial(a), 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:04:07) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(1/factorial(a), 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:17:22) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
b=(1/factorial(a))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:39) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
b=(1/factorial(a))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:52) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
b=(1/factorial(a))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:18:59) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
b=(1/factorial(a))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))
if(a<=0):
	print("Fim")
-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:19:04) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
b=(1/factorial(a))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- OUTPUT:
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
0.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:20:09) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(b, 8))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:22:32) 
-- CODE:
from math import*
cont=0
soma=
a=int(input("digite um numero: "))
while(a!=0):
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- ERROR:
File "XXXX", line 3
    soma=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:13) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:23) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:35) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:37) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- EXECUTION TIME:
0.0347869
-- ERROR:
Error response from daemon: Container b03781e46854ccc0a4593a5c869068295e9be4f7a076efbfc7129476082fbcfa is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:38) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- EXECUTION TIME:
0.0447259
-- ERROR:
Error response from daemon: Container b03781e46854ccc0a4593a5c869068295e9be4f7a076efbfc7129476082fbcfa is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:38) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- EXECUTION TIME:
0.028096
-- ERROR:
Error response from daemon: Container b03781e46854ccc0a4593a5c869068295e9be4f7a076efbfc7129476082fbcfa is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:25:38) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- EXECUTION TIME:
0.025408
-- ERROR:
Error response from daemon: Container b03781e46854ccc0a4593a5c869068295e9be4f7a076efbfc7129476082fbcfa is not running

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:25:38) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+cont
	cont=cont+a+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 17:15:01) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a!=0):
	b=1+(1/factorial(a))
	soma=soma+a
	cont=cont+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 13:27:15) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a==0):
	b=1+(1/factorial(a))
	soma=soma+a
	cont=cont+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 13:27:22) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a==0):
	b=1+(1/factorial(a))
	soma=soma+a
	cont=cont+1
	print(round(b, 8))

-- OUTPUT:
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
1.00019841
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 13:27:42) 
-- CODE:
from math import*
cont=0
soma=0
a=int(input("digite um numero: "))
while(a==0):
	b=1+(1/factorial(a))
	soma=soma+a
	cont=cont+1
print(round(b, 8))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(round(b, 8))
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:47:16) 
-- CODE:
import math

k = int(input("Numero de termos: "))

soma = 0
t = 0

while (t < k):
	tg = 1/(math.factorial(t))
	soma = soma + tg
	t = t+1
	
print(round(soma, 8))
-- EXECUTION TIME:
0.859856
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
